--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,5 @@ add_avr_executable(keyboard keyboard.cpp)
 #set_target_properties(keyboard PROPERTIES LINKER_LANGUAGE CXX)
 
 target_link_libraries(keyboard PRIVATE vusb)
+
+target_compile_options(keyboard PRIVATE "-std=c++14")
