--- a/lib/vusb_cmake/usbconfig.h.in
+++ b/lib/vusb_cmake/usbconfig.h.in
@@ -282,7 +282,9 @@ section at the end of this file).
  * CDC class is 2, use subclass 2 and protocol 1 for ACM
  */
 /* #define USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH    42 */
+#ifndef USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH
 #cmakedefine USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH @USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH@
+#endif
 /* Define this to the length of the HID report descriptor, if you implement
  * an HID device. Otherwise don't define it or define it to 0.
  * If you use this define, you must add a PROGMEM character array named
