--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,13 +71,13 @@ set(USB_CFG_IOPORTNAME "B")
 set(USB_CFG_DMINUS_BIT "3")
 set(USB_CFG_DPLUS_BIT "6")
 set(USB_CFG_HAVE_INTRIN_ENDPOINT ON)
-set(USB_CFG_INTR_POLL_INTERVAL 100)
+set(USB_CFG_INTR_POLL_INTERVAL 1)
 set(USB_CFG_MAX_BUS_POWER "500")
 set(USB_CFG_DEVICE_NAME "Keyboard emu")
 set(USB_CFG_DEVICE_CLASS 0)
 set(USB_CFG_INTERFACE_CLASS 3)
 set(USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH 63)
-set(USB_CFG_IMPLEMENT_FN_WRITE OFF)
+set(USB_CFG_IMPLEMENT_FN_WRITE ON)
 
 add_subdirectory(lib/v-usb/usbdrv)
 
