--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ set(USB_CFG_DEVICE_CLASS 0)
 set(USB_CFG_INTERFACE_CLASS 3)
 set(USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH 119)
 set(USB_CFG_IMPLEMENT_FN_WRITE ON)
-#set(USB_COUNT_SOF ON)
+set(USB_COUNT_SOF ON)
 
 add_subdirectory(lib/v-usb/usbdrv)
 
