--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,12 +73,28 @@ set(USB_CFG_DPLUS_BIT "6")
 set(USB_CFG_HAVE_INTRIN_ENDPOINT ON)
 set(USB_CFG_INTR_POLL_INTERVAL 1)
 set(USB_CFG_MAX_BUS_POWER "200")
-set(USB_CFG_DEVICE_NAME "Keyboard emu")
-set(USB_CFG_DEVICE_CLASS 0)
-set(USB_CFG_INTERFACE_CLASS 3)
 set(USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH 119)
 set(USB_CFG_IMPLEMENT_FN_WRITE ON)
 set(USB_COUNT_SOF ON)
+
+set(USB_CFG_VENDOR_ID "0xc0, 0x16")
+set(USB_CFG_VENDOR_NAME "schwanfurt.de")
+set(USB_CFG_DEVICE_ID "0xdb, 0x27")
+set(USB_CFG_DEVICE_NAME "Sun Type5 USB")
+set(USB_CFG_DEVICE_CLASS 0)
+set(USB_CFG_INTERFACE_CLASS 3)
+set(USB_CFG_INTERFACE_SUBCLASS 1)
+set(USB_CFG_INTERFACE_PROTOCOL 1)
+
+# Use PCINT11 (B3, D-) instead of INT0
+set(USB_CFG_MCU_DESC [[#define USB_INTR_CFG PCMSK1
+#define USB_INTR_CFG_SET (1 << PCINT11)
+#define USB_INTR_CFG_CLR (~(1 << PCINT11))
+#define USB_INTR_ENABLE PCICR
+#define USB_INTR_ENABLE_BIT PCIE1
+#define USB_INTR_PENDING PCIFR
+#define USB_INTR_PENDING_BIT PCIF1
+#define USB_INTR_VECTOR PCINT1_vect]])
 
 add_subdirectory(lib/v-usb/usbdrv)
 
